cabal-version:      3.0
name:               kpbj-database
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      StrictData
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , hasql
    , hasql-interpolate
    , hasql-pool
    , hasql-transaction
    , kpbj-types
    , password
    , rel8
    , servant-server
    , string-interpolate
    , text
    , text-display
    , time
    , uuid
    , vector
    , web-server-core
  exposed-modules:
    Effects.Database.Tables.BlogPosts
    Effects.Database.Tables.BlogTags
    Effects.Database.Tables.EmailVerificationTokens
    Effects.Database.Tables.EphemeralUploads
    Effects.Database.Tables.Episodes
    Effects.Database.Tables.EpisodePlayEvents
    Effects.Database.Tables.EpisodeTags
    Effects.Database.Tables.EpisodeTrack
    Effects.Database.Tables.Events
    Effects.Database.Tables.PasswordResetTokens
    Effects.Database.Tables.PlaybackHistory
    Effects.Database.Tables.ShowBlogPosts
    Effects.Database.Tables.ShowBlogTags
    Effects.Database.Tables.ShowHost
    Effects.Database.Tables.ShowSchedule
    Effects.Database.Tables.Shows
    Effects.Database.Tables.ShowTags
    Effects.Database.Tables.SitePageRevisions
    Effects.Database.Tables.SitePages
    Effects.Database.Tables.StagedUploads
    Effects.Database.Tables.StationIds
    Effects.Database.Tables.UserMetadata
    Effects.Database.Tables.Util
    OrphanInstances.Rel8
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

--------------------------------------------------------------------------------

library kpbj-database-test-lib
  import:           common-extensions
  visibility:       public
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -O0
  build-depends:
      base
    , kpbj-database
    , kpbj-types
    , web-server-core
    , bytestring
    , containers
    , data-has
    , exceptions
    , hasql
    , hasql-interpolate
    , hasql-pool
    , hasql-transaction
    , hedgehog
    , hs-opentelemetry-sdk
    , hspec
    , hspec-core
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , log-base
    , mtl
    , password
    , postgres-options
    , text
    , time
    , tmp-postgres
    , typed-process
    , unliftio-core
    , uuid
  exposed-modules:
    Test.Database.Expectation
    Test.Database.Helpers
    Test.Database.Monad
    Test.Database.Property
    Test.Database.Property.Assert
    Test.Database.Setup
    Test.Gen.DomainTypes
    Test.Gen.EmailAddress
    Test.Gen.Password
    Test.Gen.Text
    Test.Gen.Time
    Test.Gen.Tables.BlogPosts
    Test.Gen.Tables.BlogTags
    Test.Gen.Tables.EmailVerificationTokens
    Test.Gen.Tables.EphemeralUploads
    Test.Gen.Tables.EpisodeTrack
    Test.Gen.Tables.Episodes
    Test.Gen.Tables.Events
    Test.Gen.Tables.PasswordResetTokens
    Test.Gen.Tables.PlaybackHistory
    Test.Gen.Tables.ShowBlogPosts
    Test.Gen.Tables.ShowBlogTags
    Test.Gen.Tables.ShowSchedule
    Test.Gen.Tables.Shows
    Test.Gen.Tables.ShowTags
    Test.Gen.Tables.StagedUploads
    Test.Gen.Tables.StationIds
    Test.Gen.Tables.UserMetadata

--------------------------------------------------------------------------------

test-suite kpbj-database-test
  import:           common-extensions
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:
      base
    , kpbj-database
    , kpbj-database:kpbj-database-test-lib
    , kpbj-types
    , web-server-core
    , bytestring
    , containers
    , data-has
    , directory
    , exceptions
    , filepath
    , hasql
    , hasql-interpolate
    , hasql-pool
    , hasql-transaction
    , hedgehog
    , hs-opentelemetry-sdk
    , hspec
    , hspec-api
    , hspec-core
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , log-base
    , mtl
    , password
    , postgres-options
    , text
    , text-display
    , time
    , tmp-postgres
    , typed-process
    , unliftio-core
    , uuid
  other-modules:
    Effects.Database.Tables.BlogPostsSpec
    Effects.Database.Tables.BlogTagsSpec
    Effects.Database.Tables.CurrentlyAiringSpec
    Effects.Database.Tables.EmailVerificationTokensSpec
    Effects.Database.Tables.EphemeralUploadsSpec
    Effects.Database.Tables.EpisodeTrackSpec
    Effects.Database.Tables.EpisodesSpec
    Effects.Database.Tables.EventsSpec
    Effects.Database.Tables.PasswordResetTokensSpec
    Effects.Database.Tables.PlaybackHistorySpec
    Effects.Database.Tables.ShowBlogPostsSpec
    Effects.Database.Tables.ShowBlogTagsSpec
    Effects.Database.Tables.ShowHostSpec
    Effects.Database.Tables.ShowScheduleMissingEpisodesSpec
    Effects.Database.Tables.ShowScheduleSpec
    Effects.Database.Tables.ShowTagsSpec
    Effects.Database.Tables.ShowsSpec
    Effects.Database.Tables.SitePagesSpec
    Effects.Database.Tables.SitePageRevisionsSpec
    Effects.Database.Tables.StagedUploadsSpec
    Effects.Database.Tables.StationIdsSpec
    Effects.Database.Tables.UserMetadataSpec
    Effects.Database.Tables.UserRoleSpec
    Domain.Types.FileUploadSpec
    Domain.Types.SlugSpec
    Domain.Types.StorageBackendSpec
    Test.Database.Expectation
    Test.Database.Helpers
    Test.Database.Monad
    Test.Database.Property
    Test.Database.Property.Assert
    Test.Database.Setup
    Test.Gen.DomainTypes
    Test.Gen.EmailAddress
    Test.Gen.Password
    Test.Gen.Tables.BlogPosts
    Test.Gen.Tables.BlogTags
    Test.Gen.Tables.EmailVerificationTokens
    Test.Gen.Tables.EphemeralUploads
    Test.Gen.Tables.EpisodeTrack
    Test.Gen.Tables.Episodes
    Test.Gen.Tables.Events
    Test.Gen.Tables.PasswordResetTokens
    Test.Gen.Tables.PlaybackHistory
    Test.Gen.Tables.ShowBlogPosts
    Test.Gen.Tables.ShowBlogTags
    Test.Gen.Tables.ShowSchedule
    Test.Gen.Tables.ShowTags
    Test.Gen.Tables.Shows
    Test.Gen.Tables.StagedUploads
    Test.Gen.Tables.StationIds
    Test.Gen.Tables.UserMetadata
    Test.Gen.Text
    Test.Gen.Time
