cabal-version:      3.0
name:               kpbj-email
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DerivingStrategies
      FlexibleContexts
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StrictData

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
      async
    , base
    , data-has
    , log-base
    , mime-mail
    , mtl
    , smtp-mail
    , string-interpolate
    , text
  exposed-modules:
    Effects.Email.Config
    Effects.Email.Send
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
