cabal-version:      3.0
name:               lucid-htmx-alpine
version:            0.1.0.0
synopsis:           HTMX and Alpine.js attribute helpers for Lucid2
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

library
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
    , OverloadedStrings
  build-depends:
      base >=4.14 && <5
    , lucid2
    , text
  exposed-modules:
      Lucid.Alpine
    , Lucid.HTMX
    , Lucid.HTML5.Extra
  hs-source-dirs: src
  ghc-options: -Wall -fwrite-ide-info
