cabal-version:      3.0
name:               stripe-http
version:            0.1.0.0
synopsis:           Thin Stripe API client via servant-client
license:            BSD-3-Clause
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DuplicateRecordFields
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      NoFieldSelectors
      OverloadedRecordDot
      OverloadedStrings
      StrictData
      TypeOperators

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , crypton
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , memory
    , servant
    , servant-client
    , text
    , time
  exposed-modules:
    Stripe.API
    Stripe.Client
    Stripe.Servant.RawBody
    Stripe.Types
    Stripe.Webhook
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror

--------------------------------------------------------------------------------

test-suite stripe-http-test
  import: common-extensions
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Stripe.IntegrationSpec
    Stripe.WebhookSpec
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
  build-depends:
      base >= 4.19 && < 5
    , bytestring
    , containers
    , crypton
    , hspec
    , http-client
    , http-client-tls
    , memory
    , stripe-http
    , text
    , time
  ghc-options: -Wall -Werror -threaded
